--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="nav_content">
                 <nav class="header_nav li">
                     <ul class="nav_list">
-                        <li><a href="#ご挨拶" class="nav_btn">ご挨拶</a></li>
+                        <li><a href="#message" class="nav_btn">ご挨拶</a></li>
                         <li><a href="#strengths" class="nav_btn">強み</a></li>
                         <li><a href="#service" class="nav_btn">サービス</a></li>
                         <li><a href="#news" class="nav_btn">お知らせ</a></li>
@@ -50,7 +50,7 @@
                 <h1>大切な家族の<br>ホームドクターです</h1>
             </div>
         </section>
-        <section class="message">
+        <section id="message" class="message">
             <div class="container">
                 <h2>動物たちの健康で<span class="br-sp"></span>幸せな生活をサポート</h2>
                 <p>
@@ -157,9 +157,11 @@
                 </div>  
                 <ul class="news-list">
                     <li class="news-item">
-                        <span class="news-date">0000.00.00</span>
-                        <a href="#" class="news-title">去勢手術の助成金</a>
-                        <p class="news-text">長崎県より犬猫去勢手術の助成金制度が導入されました。</p>
+                        <a href="#">
+                            <span class="news-date">0000.00.00</span>
+                            <span class="news-title">去勢手術の助成金</span>
+                            <p class="news-text">長崎県より犬猫去勢手術の助成金制度が導入されました。</p>
+                        </a>
                     </li>
                     <li class="news-item">
                         <span class="news-date">0000.00.00</span>
@@ -261,7 +263,7 @@
                             <a href="fv" class="footer-nav_link">トップ</a>
                         </li>
                         <li class="footer-nav_list">
-                            <a href=".message" class="footer-nav_link">ご挨拶</a>
+                            <a href="#message" class="footer-nav_link">ご挨拶</a>
                         </li>
                         <li class="footer-nav_list">
                             <a href="#strengths" class="footer-nav_link">強み</a>
