--- a/index.html
+++ b/index.html
@@ -164,24 +164,32 @@
                         </a>
                     </li>
                     <li class="news-item">
-                        <span class="news-date">0000.00.00</span>
-                        <a href="#" class="news-title">往診の範囲が拡大</a>
-                        <p class="news-text">往診の範囲を長崎市内から長崎県内まで拡大しました。</p>
+                        <a href="#">
+                            <span class="news-date">0000.00.00</span>
+                            <span class="news-title">往診の範囲が拡大</span>
+                            <p class="news-text">往診の範囲を長崎市内から長崎県内まで拡大しました。</p>
+                        </a>
                     </li>
                     <li class="news-item">
-                        <span class="news-date">0000.00.00</span>
-                        <a href="#" class="news-title">新年のご挨拶</a>
-                        <p class="news-text">謹賀新年。今年もよろしくお願いいたします。</p>
+                        <a href="#">
+                            <span class="news-date">0000.00.00</span>
+                            <span class="news-title">新年のご挨拶</span>
+                            <p class="news-text">謹賀新年。今年もよろしくお願いいたします。</p>
+                        </a>
                     </li>
                     <li class="news-item">
-                        <span class="news-date">0000.00.00</span>
-                        <a href="#" class="news-title">年末年始の診療</a>
-                        <p class="news-text">当院では年末年始も24時間休まず診療しております。</p>
+                        <a href="#">
+                            <span class="news-date">0000.00.00</span>
+                            <span class="news-title">年末年始の診療</span>
+                            <p class="news-text">当院では年末年始も24時間休まず診療しております。</p>
+                        </a>
                     </li>
                     <li class="news-item">
-                        <span class="news-date">0000.00.00</span>
-                        <a href="#" class="news-title">開院11周年</a>
-                        <p class="news-text2">当院開院11周年を迎えることとなりました。</p>
+                        <a href="#">
+                            <span class="news-date">0000.00.00</span>
+                            <span class="news-title">開院11周年</span>
+                            <p class="news-text2">当院開院11周年を迎えることとなりました。</p>
+                        </a>
                     </li>
                 </ul>
             </div>
