--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <a href="#">
                             <span class="news-date">0000.00.00</span>
                             <span class="news-title">開院11周年</span>
-                            <p class="news-text2">当院開院11周年を迎えることとなりました。</p>
+                            <p class="news-text2">当院では年末年始も24時間休まず診療しております。</p>
                         </a>
                     </li>
                 </ul>
