--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <span class="header-title">滑石きたむら動物病院</span>
             </a>             
             <div class="nav_content">
-                <nav class="header_nav li">
+                <nav class="header_nav">
                     <ul class="nav_list">
                         <li><a href="#message" class="nav_btn">ご挨拶</a></li>
                         <li><a href="#strengths" class="nav_btn">強み</a></li>
