--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
         <div class="container">
             <a href="#" class="title">
-                <img src="images/niku.svg" alt="アイコン" class="header-icon">
+                <img src="images/paws.svg" alt="アイコン" class="header-icon">
                 <span class="header-title">滑石きたむら動物病院</span>
             </a>             
             <div class="nav_content">
@@ -58,15 +58,15 @@
                 緊急時だけではなく、日常のちょっとした不安や違和感などお気軽にご相談ください。<br>
                 動物たちが健康で幸せな生活を送ることができるようサポートいたします。
                 </p>    
-                <img src="images/servicegazou.png"  alt="service_image" class="service-gazou">
+                <img src="images/servicepicture.png"  alt="service_image" class="service-gazou">
             </div>     
         </section>
         <section id="strengths" class="bg-cyan">
             <div class="inner">
                 <div class="strengths-with-images">
-                    <img src="images/niku.svg" alt="アイコン" class="strengths-icon">
+                    <img src="images/paws.svg" alt="アイコン" class="strengths-icon">
                     <h3>強み</h3>
-                    <img src="images/niku.svg" alt="アイコン" class="strengths-icon">
+                    <img src="images/paws.svg" alt="アイコン" class="strengths-icon">
                 </div> 
                 <div class="strengths-item">
                     <div class="strengths-text-area">
@@ -90,13 +90,13 @@
                         </picture>
                     </div>    
                     <div class="strengths-text-area2">
-                        <h4 class="">エキゾチックアニマルも対応します</h4>
+                        <h4 class="">エキゾチックアニマルも<br class="break-only-320">対応します</h4>
                         <p>犬・猫だけではなく、ウサギやハムスター、<span class="br-sp"></span>爬虫類や両生類、鳥類などエキゾチックアニ<span class="br-sp"></span>マルも対応しております。</p>
                         </div>
                     </div>
                 <div class="strengths-item">
                     <div class="strengths-text-area3">
-                        <h4 class="">ご自宅まで伺う往診も行っています</h4>
+                        <h4 class="">ご自宅まで伺う往診も<br class="break-only-320">行っています</h4>
                         <p>外出が難しい動物たちや飼い主さまのため<span class="br-sp"></span>に、獣医師や看護師がご自宅まで伺う往診<span class="br-sp"></span>サービスも<br class="br-pc">行っております。</p>
                     </div>
                     <div class="strengths-img-area">
@@ -112,9 +112,9 @@
         <section id="service">
             <div class="inner">
                 <div class="service-with-images">
-                    <img src="images/niku.svg" alt="アイコン" class="service-icon">
+                    <img src="images/paws.svg" alt="アイコン" class="service-icon">
                     <h2>サービス</h2>
-                    <img src="images/niku.svg" alt="アイコン" class="service-icon">
+                    <img src="images/paws.svg" alt="アイコン" class="service-icon">
                 </div> 
                 <div class="service-list">
                     <div class="service-content">
@@ -151,9 +151,9 @@
         <section id="news" class="bg-cyan">
             <div class="inner">
                 <div class="news-with-images">
-                    <img src="images/niku.svg" alt="アイコン" class="news-icon">
+                    <img src="images/paws.svg" alt="アイコン" class="news-icon">
                     <h3>お知らせ</h3>
-                    <img src="images/niku.svg" alt="アイコン" class="news-icon">
+                    <img src="images/paws.svg" alt="アイコン" class="news-icon">
                 </div>  
                 <ul class="news-list">
                     <li class="news-item">
@@ -197,9 +197,9 @@
         <section id="access">
             <div class="inner">
                 <div class="access-with-images">
-                    <img src="images/niku.svg" alt="アイコン" class="access-icon">
+                    <img src="images/paws.svg" alt="アイコン" class="access-icon">
                     <h3>アクセス</h3>
-                    <img src="images/niku.svg" alt="アイコン" class="access-icon">
+                    <img src="images/paws.svg" alt="アイコン" class="access-icon">
                 </div>  
                 <div class="access-flex">
                     <div class="access-img-area">
@@ -228,9 +228,9 @@
         <section id="contact" class="contact">
             <div class="inner">
                 <div class="contact-with-images">
-                    <img src="images/niku.svg" alt="アイコン" class="contact-icon">
+                    <img src="images/paws.svg" alt="アイコン" class="contact-icon">
                     <h3 class="section-title">お問い合わせ</h3>
-                    <img src="images/niku.svg" alt="アイコン" class="contact-icon">
+                    <img src="images/paws.svg" alt="アイコン" class="contact-icon">
                 </div> 
                 <div class="desc">
                 <p class="section-desc">
@@ -263,7 +263,6 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="inner">
             <div class="footer_content">
                 <nav class="footer_nav footer-nav">
                     <ul class="footer-nav_lists">
@@ -292,10 +291,9 @@
                 </nav>
                 <p class="footer_copyright">
                     <span class="rogo">©Copyright0000</span>
-                    <span class="name">滑石きたむら動物病院</span>
-                        
+                    <span class="name">滑石きたむら動物病院</span>   
                 </p>   
-            </div>
+            </div>   
             <ul class="footer_sns sns">
                 <li class="sns_list">
                     <a href="" class="sns_link sns_link--x" target="_blank" rel="noopener noreferrer">
@@ -318,7 +316,6 @@
                     </a>
                 </li>
             </ul>
-        </div>
     </footer>
 </body>
 </html>
