--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <picture>
                     <source media="(max-width: 768px)" srcset="images/Mask-group-sp.jpg">
                     <source media="(min-width: 767px)" srcset="images/Mask-group.jpg">
-                    <img src="images/Mask-group.jpg" alt="fv_image">
+                    <img src="images/Mask-group.jpg" alt="トップ画像">
                 </picture>
             </div>
             <div class="main_copy">
@@ -58,7 +58,7 @@
                 緊急時だけではなく、日常のちょっとした不安や違和感などお気軽にご相談ください。<br>
                 動物たちが健康で幸せな生活を送ることができるようサポートいたします。
                 </p>    
-                <img src="images/servicepicture.png"  alt="service_image" class="service-gazou">
+                <img src="images/servicepicture.png"  alt="足跡" class="service-gazou">
             </div>     
         </section>
         <section id="strengths" class="bg-cyan">
@@ -77,7 +77,7 @@
                         <picture>
                             <source media="(max-width: 767px)" srcset="images/strengths01_sp.jpg">
                             <source media="(min-width: 768px)" srcset="images/strengths01.jpg">
-                            <img src="images/strengths01.jpg" alt="strengths01_image">
+                            <img src="images/strengths01.jpg" alt="獣医師と看護師">
                         </picture>
                     </div>  
                 </div>
@@ -86,7 +86,7 @@
                         <picture>
                             <source media="(max-width: 767px)" srcset="images/strengths02_sp.jpg">
                             <source media="(min-width: 768px)" srcset="images/strengths02.jpg">
-                            <img src="images/strengths02.jpg" alt="strengths02_image">
+                            <img src="images/strengths02.jpg" alt="エキゾチックアニマル">
                         </picture>
                     </div>    
                     <div class="strengths-text-area2">
@@ -103,7 +103,7 @@
                         <picture>
                             <source media="(max-width: 767px)" srcset="images/strengths03_sp.jpg">
                             <source media="(min-width: 768px)" srcset="images/strengths03.jpg">
-                            <img src="images/strengths03.jpg" alt="strengths03_image">
+                            <img src="images/strengths03.jpg" alt="往診">
                         </picture>
                     </div>    
                 </div>
@@ -121,7 +121,7 @@
                         <picture>
                             <source media="(max-width: 767px)" srcset="images/service01_sp.jpg">
                             <source media="(min-width: 768px)" srcset="images/service01.jpg">
-                            <img src="images/service01.jpg" alt="service01_img">
+                            <img src="images/service01.jpg" alt="往診サービス">
                         </picture>
                         <h3>往診サービス</h3>
                         <p>シニアや介護などのペットのための自宅で診療するサービスです。</p>
@@ -130,7 +130,7 @@
                         <picture>
                         <source media="(max-width: 767px)" srcset="images/service02_sp.jpg">
                         <source media="(min-width: 768px)" srcset="images/service02.jpg">
-                        <img src="images/service02.jpg" alt="service01_img">
+                        <img src="images/service02.jpg" alt="ペットホテル">
                         </picture>
                         <h3>ペットホテル</h3>
 
@@ -140,7 +140,7 @@
                         <picture>
                             <source media="(max-width: 767px)" srcset="images/service03_sp.jpg">
                             <source media="(min-width: 768px)" srcset="images/service03.jpg">
-                            <img src="images/service03.jpg" alt="service01_img">
+                            <img src="images/service03.jpg" alt="トリミング">
                         </picture>
                         <h3>トリミング</h3>
                         <p>動物の体に負担をかけない技術や液剤を使用いたします。</p>
@@ -267,7 +267,7 @@
                 <nav class="footer_nav footer-nav">
                     <ul class="footer-nav_lists">
                         <li class="footer-nav_list">
-                            <a href="fv" class="footer-nav_link">トップ</a>
+                            <a href="#" class="footer-nav_link">トップ</a>
                         </li>
                         <li class="footer-nav_list">
                             <a href="#message" class="footer-nav_link">ご挨拶</a>
@@ -297,22 +297,22 @@
             <ul class="footer_sns sns">
                 <li class="sns_list">
                     <a href="" class="sns_link sns_link--x" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/icon_twitter.svg" alt="x">
+                        <img src="./images/icon_twitter.svg" alt="エックス">
                     </a>
                 </li>
                 <li class="sns_list">
                     <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/icon_facebook.svg" alt="facebook">
+                            <img src="./images/icon_facebook.svg" alt="フェイスブック">
                     </a>
                 </li>
                 <li class="sns_list">
                     <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/icon_youtube.svg" alt="youtube">
+                            <img src="./images/icon_youtube.svg" alt="ユーチューブ">
                     </a>
                 </li>
                 <li class="sns_list">
                     <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/icon_instagram.svg" alt="instagram">
+                            <img src="./images/icon_instagram.svg" alt="インスタグラム">
                     </a>
                 </li>
             </ul>
