--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <h2>動物たちの健康で<span class="br-sp"></span>幸せな生活をサポート</h2>
                 <p>
-                当院は地域に密着し、皆さまの大切な家族の一員である動物たちのホームドクターを目指しています。<br>
+                当院は地域に密着し、皆さまの大切な家族の<span class="br-sp"></span>一員である動物たちのホームドクターを目指しています。<br>
                 緊急時だけではなく、日常のちょっとした不安や違和感などお気軽にご相談ください。<br>
                 動物たちが健康で幸せな生活を送ることができるようサポートいたします。
                 </p>    
