--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="inner">
                 <div class="news-with-images">
                     <img src="images/paws.svg" alt="アイコン" class="news-icon">
-                    <h3>お知らせ</h3>
+                    <h2>お知らせ</h2>
                     <img src="images/paws.svg" alt="アイコン" class="news-icon">
                 </div>  
                 <ul class="news-list">
@@ -188,7 +188,7 @@
                         <a href="#">
                             <span class="news-date">0000.00.00</span>
                             <span class="news-title">開院11周年</span>
-                            <p class="news-text2">当院では年末年始も24時間休まず診療しております。</p>
+                            <p class="news-text2">当院開院11周年を迎えることとなりました。</p>
                         </a>
                     </li>
                 </ul>
@@ -198,7 +198,7 @@
             <div class="inner">
                 <div class="access-with-images">
                     <img src="images/paws.svg" alt="アイコン" class="access-icon">
-                    <h3>アクセス</h3>
+                    <h2>アクセス</h2>
                     <img src="images/paws.svg" alt="アイコン" class="access-icon">
                 </div>  
                 <div class="access-flex">
@@ -229,7 +229,7 @@
             <div class="inner">
                 <div class="contact-with-images">
                     <img src="images/paws.svg" alt="アイコン" class="contact-icon">
-                    <h3 class="section-title">お問い合わせ</h3>
+                    <h2 class="section-title">お問い合わせ</h2>
                     <img src="images/paws.svg" alt="アイコン" class="contact-icon">
                 </div> 
                 <div class="desc">
