--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         <section id="strengths" class="bg-cyan">
             <div class="inner">
                 <div class="strengths-with-images">
-                    <img src="images/paws.svg" alt="アイコン" class="strengths-icon">
+                    <img src="images/paws.svg" alt="肉球のイラスト" class="strengths-icon">
                     <h3>強み</h3>
-                    <img src="images/paws.svg" alt="アイコン" class="strengths-icon">
+                    <img src="images/paws.svg" alt="肉球のイラスト" class="strengths-icon">
                 </div> 
                 <div class="strengths-item">
                     <div class="strengths-text-area">
@@ -77,7 +77,7 @@
                         <picture>
                             <source media="(max-width: 767px)" srcset="images/strengths01_sp.jpg">
                             <source media="(min-width: 768px)" srcset="images/strengths01.jpg">
-                            <img src="images/strengths01.jpg" alt="獣医師と看護師">
+                            <img src="images/strengths01.jpg" alt="獣医師と看護師がならんでいる写真">
                         </picture>
                     </div>  
                 </div>
@@ -86,7 +86,7 @@
                         <picture>
                             <source media="(max-width: 767px)" srcset="images/strengths02_sp.jpg">
                             <source media="(min-width: 768px)" srcset="images/strengths02.jpg">
-                            <img src="images/strengths02.jpg" alt="エキゾチックアニマル">
+                            <img src="images/strengths02.jpg" alt="カメレオンの画像">
                         </picture>
                     </div>    
                     <div class="strengths-text-area2">
@@ -103,7 +103,7 @@
                         <picture>
                             <source media="(max-width: 767px)" srcset="images/strengths03_sp.jpg">
                             <source media="(min-width: 768px)" srcset="images/strengths03.jpg">
-                            <img src="images/strengths03.jpg" alt="往診">
+                            <img src="images/strengths03.jpg" alt="訪問で往診している様子">
                         </picture>
                     </div>    
                 </div>
@@ -112,16 +112,16 @@
         <section id="service">
             <div class="inner">
                 <div class="service-with-images">
-                    <img src="images/paws.svg" alt="アイコン" class="service-icon">
+                    <img src="images/paws.svg" alt="肉球のイラスト" class="service-icon">
                     <h2>サービス</h2>
-                    <img src="images/paws.svg" alt="アイコン" class="service-icon">
+                    <img src="images/paws.svg" alt="肉球のイラスト" class="service-icon">
                 </div> 
                 <div class="service-list">
                     <div class="service-content">
                         <picture>
                             <source media="(max-width: 767px)" srcset="images/service01_sp.jpg">
                             <source media="(min-width: 768px)" srcset="images/service01.jpg">
-                            <img src="images/service01.jpg" alt="往診サービス">
+                            <img src="images/service01.jpg" alt="往診サービスでのスタッフとクライアントの様子">
                         </picture>
                         <h3>往診サービス</h3>
                         <p>シニアや介護などのペットのための自宅で診療するサービスです。</p>
@@ -130,7 +130,7 @@
                         <picture>
                         <source media="(max-width: 767px)" srcset="images/service02_sp.jpg">
                         <source media="(min-width: 768px)" srcset="images/service02.jpg">
-                        <img src="images/service02.jpg" alt="ペットホテル">
+                        <img src="images/service02.jpg" alt="ペットホテルでお世話しているスタッフの写真">
                         </picture>
                         <h3>ペットホテル</h3>
 
@@ -140,7 +140,7 @@
                         <picture>
                             <source media="(max-width: 767px)" srcset="images/service03_sp.jpg">
                             <source media="(min-width: 768px)" srcset="images/service03.jpg">
-                            <img src="images/service03.jpg" alt="トリミング">
+                            <img src="images/service03.jpg" alt="トリミングの実際の様子">
                         </picture>
                         <h3>トリミング</h3>
                         <p>動物の体に負担をかけない技術や液剤を使用いたします。</p>
@@ -151,9 +151,9 @@
         <section id="news" class="bg-cyan">
             <div class="inner">
                 <div class="news-with-images">
-                    <img src="images/paws.svg" alt="アイコン" class="news-icon">
+                    <img src="images/paws.svg" alt="肉球のイラスト" class="news-icon">
                     <h2>お知らせ</h2>
-                    <img src="images/paws.svg" alt="アイコン" class="news-icon">
+                    <img src="images/paws.svg" alt="肉球のイラスト" class="news-icon">
                 </div>  
                 <ul class="news-list">
                     <li class="news-item">
@@ -197,9 +197,9 @@
         <section id="access">
             <div class="inner">
                 <div class="access-with-images">
-                    <img src="images/paws.svg" alt="アイコン" class="access-icon">
+                    <img src="images/paws.svg" alt="肉球のイラスト" class="access-icon">
                     <h2>アクセス</h2>
-                    <img src="images/paws.svg" alt="アイコン" class="access-icon">
+                    <img src="images/paws.svg" alt="肉球のイラスト" class="access-icon">
                 </div>  
                 <div class="access-flex">
                     <div class="access-img-area">
@@ -228,9 +228,9 @@
         <section id="contact" class="contact">
             <div class="inner">
                 <div class="contact-with-images">
-                    <img src="images/paws.svg" alt="アイコン" class="contact-icon">
+                    <img src="images/paws.svg" alt="肉球のイラスト" class="contact-icon">
                     <h2 class="section-title">お問い合わせ</h2>
-                    <img src="images/paws.svg" alt="アイコン" class="contact-icon">
+                    <img src="images/paws.svg" alt="肉球のイラスト" class="contact-icon">
                 </div> 
                 <div class="desc">
                 <p class="section-desc">
@@ -297,22 +297,22 @@
             <ul class="footer_sns sns">
                 <li class="sns_list">
                     <a href="" class="sns_link sns_link--x" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/icon_twitter.svg" alt="エックス">
+                        <img src="./images/icon_twitter.svg" alt="エックス公式アカウント">
                     </a>
                 </li>
                 <li class="sns_list">
                     <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/icon_facebook.svg" alt="フェイスブック">
+                            <img src="./images/icon_facebook.svg" alt="フェイスブック公式ページ">
                     </a>
                 </li>
                 <li class="sns_list">
                     <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/icon_youtube.svg" alt="ユーチューブ">
+                            <img src="./images/icon_youtube.svg" alt="ユーチューブ公式チャンネル">
                     </a>
                 </li>
                 <li class="sns_list">
                     <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/icon_instagram.svg" alt="インスタグラム">
+                            <img src="./images/icon_instagram.svg" alt="インスタグラム公式アカウント">
                     </a>
                 </li>
             </ul>
