--- a/index.html
+++ b/index.html
@@ -232,9 +232,13 @@
         <section id="contact" class="contact">
             <div class="inner">
                 <div class="contact-with-images">
-                    <img src="images/paws.svg" alt="肉球のイラスト" class="contact-icon">
+                    <div class="images-icon">
+                      <img src="images/paws.svg" alt="肉球のイラスト" class="contact-icon">
+                    </div>
                     <h2 class="section-title">お問い合わせ</h2>
-                    <img src="images/paws.svg" alt="肉球のイラスト" class="contact-icon">
+                    <div class="images-icon">
+                      <img src="images/paws.svg" alt="肉球のイラスト" class="contact-icon">
+                    </div>  
                 </div> 
                 <div class="desc">
                 <p class="section-desc">
