--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                     </div>    
                     <div class="strengths-text-area2">
                         <h4 class="">エキゾチックアニマルも<br class="break-only-320">対応します</h4>
-                        <p>犬・猫だけではなく、ウサギやハムスター、<span class="br-sp"></span>爬虫類や両生類、鳥類などエキゾチックアニ<span class="br-sp"></span>マルも対応しております。</p>
+                        <p>犬・猫だけではなく、ウサギやハムスター、爬虫類や両生類、鳥類などエキゾチックアニマルも対応しております。</p>
                         </div>
                     </div>
                 <div class="strengths-item">
                     <div class="strengths-text-area3">
                         <h4 class="">ご自宅まで伺う往診も<br class="break-only-320">行っています</h4>
-                        <p>外出が難しい動物たちや飼い主さまのため<span class="br-sp"></span>に、獣医師や看護師がご自宅まで伺う往診<span class="br-sp"></span>サービスも<span class="br-pc"></span>行っております。</p>
+                        <p>外出が難しい動物たちや飼い主さまのために、獣医師や看護師がご自宅まで伺う往診サービスも<span class="br-pc"></span>行っております。</p>
                     </div>
                     <div class="strengths-img-area">
                         <picture>
@@ -305,7 +305,7 @@
             <ul class="footer_sns sns">
                 <li class="sns_list">
                     <a href="" class="sns_link sns_link--x" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/icon_twitter.svg" alt="エックス公式アカウント">
+                        <img src="./images/icon_twitter.svg" alt="X（旧Twitter）公式アカウント">
                     </a>
                 </li>
                 <li class="sns_list">
