--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <div class="fv_image">
                 <picture>
                     <source media="(max-width: 768px)" srcset="images/First-view-sp.jpg">
-                    <source media="(min-width: 767px)" srcset="images/First-view.jpg">
-                    <img src="images/First-view.jpg" alt="トップ画像">
+                    <source media="(min-width: 769px)" srcset="images/First-view.jpg">
+                    <img src="images/First-view-sp.jpg" alt="トップ画像">
                 </picture>
             </div>
             <div class="main_copy">
@@ -68,44 +68,57 @@
                     <h3>強み</h3>
                     <img src="images/paws.svg" alt="肉球のイラスト" class="strengths-icon">
                 </div> 
-                <div class="strengths-item">
-                    <div class="strengths-text-area">
-                    <h4 class="">経験豊富なスタッフが<span class="br-sp"></span>24時間365日常駐</h4>
-                    <p>当院は24時間365日いつでも対応できるよう、豊富な経験を持つ獣医師や看護師が約50名体制で常駐しております。</p>
-                    </div>
-                    <div class="strengths-img-area">
-                        <picture>
-                            <source media="(max-width: 767px)" srcset="images/strengths01_sp.jpg">
-                            <source media="(min-width: 768px)" srcset="images/strengths01.jpg">
-                            <img src="images/strengths01.jpg" alt="獣医師と看護師がならんでいる写真">
-                        </picture>
-                    </div>  
-                </div>
-                <div class="strengths-item">
-                    <div class="strengths-img-area">
-                        <picture>
-                            <source media="(max-width: 767px)" srcset="images/strengths02_sp.jpg">
-                            <source media="(min-width: 768px)" srcset="images/strengths02.jpg">
-                            <img src="images/strengths02.jpg" alt="カメレオンの画像">
-                        </picture>
-                    </div>    
-                    <div class="strengths-text-area2">
-                        <h4 class="">エキゾチックアニマルも<br class="break-only-320">対応します</h4>
-                        <p>犬・猫だけではなく、ウサギやハムスター、爬虫類や両生類、鳥類などエキゾチックアニマルも対応しております。</p>
+                <div class="strengths-sec_contents">
+                    <div class="strengths-sec_items">
+                        <div class="strengths-sec_item strengths-sec-item">
+                          <div class="strengths-sec-item_content">
+                            <div class="strengths-sec-item_title">
+                                <h4>経験豊富なスタッフが<span class="br-sp"></span>24時間365日常駐</h4>
+                            </div>
+                            <div class="strengths-sec-item_text">
+                                <p>当院は24時間365日いつでも対応できるよう、豊富な経験を持つ獣医師や看護師が約50名体制で常駐しております。</p>
+                            </div>
+                          </div>
+                          <div class="strengths-sec-item_image">
+                            <picture>
+                                <source media="(min-width: 769px)" srcset="images/strengths01.jpg">
+                                <img src="images/strengths01_sp.jpg" alt="動物病院">
+                            </picture>
+                          </div>   
+                        </div>
+                        <div class="strengths-sec_item strengths-sec-item">
+                          <div class="strengths-sec-item_content">
+                            <div class="strengths-sec-item_title">
+                                <h4>エキゾチックアニマルも対応します</h4>
+                            </div>
+                            <div class="strengths-sec-item_text">
+                                <p>犬・猫だけではなく、ウサギやハムスター、爬虫類や両生類、鳥類などエキゾチックアニマルも対応しております。</p>
+                            </div>
+                          </div>
+                          <div class="strengths-sec-item_image">
+                            <picture>
+                                <source media="(min-width: 769px)" srcset="images/strengths02.jpg">
+                                <img src="images/strengths02_sp.jpg" alt="動物病院">
+                            </picture>
+                          </div>   
+                        </div>
+                        <div class="strengths-sec_item strengths-sec-item">
+                          <div class="strengths-sec-item_content">
+                            <div class="strengths-sec-item_title">
+                                <h4>ご自宅まで伺う往診も行っています</h4>
+                            </div>
+                            <div class="strengths-sec-item_text">
+                                <p>外出が難しい動物たちや飼い主さまのために、獣医師や看護師がご自宅まで伺う往診<span class="br-sp"></span>サービスも<span class="br-pc"></span>行っております。</p>
+                            </div>
+                          </div>
+                          <div class="strengths-sec-item_image">
+                            <picture>
+                                <source media="(min-width: 769px)" srcset="images/strengths03.jpg">
+                                <img src="images/strengths03_sp.jpg" alt="動物病院">
+                            </picture>
+                          </div>   
                         </div>
                     </div>
-                <div class="strengths-item">
-                    <div class="strengths-text-area3">
-                        <h4 class="">ご自宅まで伺う往診も<br class="break-only-320">行っています</h4>
-                        <p>外出が難しい動物たちや飼い主さまのために、獣医師や看護師がご自宅まで伺う往診サービスも<span class="br-pc"></span>行っております。</p>
-                    </div>
-                    <div class="strengths-img-area">
-                        <picture>
-                            <source media="(max-width: 767px)" srcset="images/strengths03_sp.jpg">
-                            <source media="(min-width: 768px)" srcset="images/strengths03.jpg">
-                            <img src="images/strengths03.jpg" alt="訪問で往診している様子">
-                        </picture>
-                    </div>    
                 </div>
             </div>
         </section>            
@@ -133,7 +146,6 @@
                         <img src="images/service02.jpg" alt="ペットホテルでお世話しているスタッフの写真">
                         </picture>
                         <h3>ペットホテル</h3>
-
                         <p>短時間の一時預かりから宿泊までご利用いただけるサービスです。</p>
                     </div>
                     <div class="service-content">
@@ -158,37 +170,67 @@
                 <ul class="news-list">
                     <li class="news-item">
                         <a href="#">
-                            <span class="news-date">0000.00.00</span>
-                            <span class="news-title">去勢手術の助成金</span>
-                            <p class="news-text">長崎県より犬猫去勢手術の助成金制度が導入されました。</p>
+                            <div class="news-date">
+                                <time>0000.00.00</time>
+                            </div>
+                            <div class="news-title">
+                                <h3>去勢手術の助成金</h3>
+                            </div>
+                            <div class="news-text">
+                                <p>長崎県より犬猫去勢手術の助成金制度が導入されました。</p>
+                            </div>
                         </a>
                     </li>
                     <li class="news-item">
                         <a href="#">
-                            <span class="news-date">0000.00.00</span>
-                            <span class="news-title">往診の範囲が拡大</span>
-                            <p class="news-text">往診の範囲を長崎市内から長崎県内まで拡大しました。</p>
+                            <div class="news-date">
+                                <time>0000.00.00</time>
+                            </div>
+                            <div class="news-title">
+                                <h3>往診の範囲が拡大</h3>
+                            </div>
+                            <div class="news-text">
+                                <p>往診の範囲を長崎市内から長崎県内まで拡大しました。</p>
+                            </div>
                         </a>
                     </li>
                     <li class="news-item">
                         <a href="#">
-                            <span class="news-date">0000.00.00</span>
-                            <span class="news-title">新年のご挨拶</span>
-                            <p class="news-text">謹賀新年。今年もよろしくお願いいたします。</p>
+                            <div class="news-date">
+                                <time>0000.00.00</time>
+                            </div>
+                            <div class="news-title">
+                                <h3>新年のご挨拶</h3>
+                            </div>
+                            <div class="news-text">
+                                <p>謹賀新年。今年もよろしくお願いいたします。</p>
+                            </div>          
                         </a>
                     </li>
                     <li class="news-item">
                         <a href="#">
-                            <span class="news-date">0000.00.00</span>
-                            <span class="news-title">年末年始の診療</span>
-                            <p class="news-text">当院では年末年始も24時間休まず診療しております。</p>
+                            <div class="news-date">
+                                <time>0000.00.00</time>
+                            </div>
+                            <div class="news-title">
+                                <h3>年末年始の診療</h3>
+                            </div>
+                            <div class="news-text">
+                                <p>当院では年末年始も24時間休まず診療しております。</p>
+                            </div>      
                         </a>
                     </li>
                     <li class="news-item">
                         <a href="#">
-                            <span class="news-date">0000.00.00</span>
-                            <span class="news-title">開院11周年</span>
-                            <p class="news-text2">当院開院11周年を迎えることとなりました。</p>
+                            <div class="news-date">
+                                <time>0000.00.00</time>
+                            </div>
+                            <div class="news-title">
+                                <h3>開院11周年</h3>
+                            </div>
+                            <div class="news-text">
+                                <p>当院開院11周年を迎えることとなりました。</p>
+                            </div>                           
                         </a>
                     </li>
                 </ul>
@@ -219,7 +261,8 @@
                             <a href="tel:0000000000">000-0000-0000</a>
                         </div>
                         <div class="access-sec-item_mail">
-                            <p>メール：<span class="id-span">info@example.com</span></p>
+                            <span>メール：</span>
+                            <a href="mailto:info@example.com">info@example.com</a>
                         </div>
                         <div class="access-sec-item_hours">
                             <p>診療時間：24時間365日</p>
@@ -304,23 +347,23 @@
             </div>   
             <ul class="footer_sns sns">
                 <li class="sns_list">
-                    <a href="" class="sns_link sns_link--x" target="_blank" rel="noopener noreferrer">
+                    <a class="sns_link sns_link--x" href="https://x.com/home" target="_blank" rel="noopener noreferrer">
                         <img src="./images/icon_twitter.svg" alt="X（旧Twitter）公式アカウント">
                     </a>
                 </li>
                 <li class="sns_list">
-                    <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/icon_facebook.svg" alt="フェイスブック公式ページ">
+                    <a class="sns_link" href="https://www.facebook.com/?locale=ja_JP" target="_blank" rel="noopener noreferrer">
+                        <img src="./images/icon_facebook.svg" alt="フェイスブック公式ページ">
                     </a>
                 </li>
                 <li class="sns_list">
-                    <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/icon_youtube.svg" alt="ユーチューブ公式チャンネル">
+                    <a class="sns_link" href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="./images/icon_youtube.svg" alt="ユーチューブ公式チャンネル">
                     </a>
                 </li>
                 <li class="sns_list">
-                    <a href="" class="sns_link" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/icon_instagram.svg" alt="インスタグラム公式アカウント">
+                    <a class="sns_link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="./images/icon_instagram.svg" alt="インスタグラム公式アカウント">
                     </a>
                 </li>
             </ul>
