--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                             <div class="news-title">
                                 <h3>開院11周年</h3>
                             </div>
-                            <div class="news-text">
+                            <div class="news-text2">
                                 <p>当院開院11周年を迎えることとなりました。</p>
                             </div>                           
                         </a>
