--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <h2>動物たちの健康で<span class="br-sp"></span>幸せな生活をサポート</h2>
                 <p>
-                当院は地域に密着し、皆さまの大切な家族の<span class="br-sp"></span>一員である動物たちのホームドクターを目指しています。<br>
+                当院は地域に密着し、皆さまの大切な家族の一員である動物たちのホームドクターを目指しています。<br>
                 緊急時だけではなく、日常のちょっとした不安や違和感などお気軽にご相談ください。<br>
                 動物たちが健康で幸せな生活を送ることができるようサポートいたします。
                 </p>    
@@ -170,67 +170,38 @@
                 <ul class="news-list">
                     <li class="news-item">
                         <a href="#">
-                            <div class="news-date">
-                                <time>0000.00.00</time>
-                            </div>
-                            <div class="news-title">
-                                <h3>去勢手術の助成金</h3>
-                            </div>
-                            <div class="news-text">
-                                <p>長崎県より犬猫去勢手術の助成金制度が導入されました。</p>
-                            </div>
+                            <time class="news-date">0000.00.00</time>
+                            <h3 class="news-title">去勢手術の助成金</h3>
+                            <p class="news-text">長崎県より犬猫去勢手術の助成金制度が導入されました。</p>
                         </a>
                     </li>
                     <li class="news-item">
                         <a href="#">
-                            <div class="news-date">
-                                <time>0000.00.00</time>
-                            </div>
-                            <div class="news-title">
-                                <h3>往診の範囲が拡大</h3>
-                            </div>
-                            <div class="news-text">
-                                <p>往診の範囲を長崎市内から長崎県内まで拡大しました。</p>
-                            </div>
+                            <time class="news-date">0000.00.00</time>
+                            <h3 class="news-title">往診の範囲が拡大</h3>
+                            <p class="news-text">往診の範囲を長崎市内から長崎県内まで拡大しました。</p>
                         </a>
                     </li>
                     <li class="news-item">
                         <a href="#">
-                            <div class="news-date">
-                                <time>0000.00.00</time>
-                            </div>
-                            <div class="news-title">
-                                <h3>新年のご挨拶</h3>
-                            </div>
-                            <div class="news-text">
-                                <p>謹賀新年。今年もよろしくお願いいたします。</p>
-                            </div>          
+                            <time class="news-date">0000.00.00</time>
+                            <h3 class="news-title">新年のご挨拶</h3>
+                            <p class="news-text">謹賀新年。今年もよろしくお願いいたします。</p>
                         </a>
                     </li>
                     <li class="news-item">
                         <a href="#">
-                            <div class="news-date">
-                                <time>0000.00.00</time>
-                            </div>
-                            <div class="news-title">
-                                <h3>年末年始の診療</h3>
-                            </div>
-                            <div class="news-text">
-                                <p>当院では年末年始も24時間休まず診療しております。</p>
-                            </div>      
+                            <time class="news-date">0000.00.00</time>
+                            <h3 class="news-title">年末年始の診療</h3>
+                            <p class="news-text">当院では年末年始も24時間休まず診療しております。</p>
                         </a>
                     </li>
                     <li class="news-item">
                         <a href="#">
-                            <div class="news-date">
-                                <time>0000.00.00</time>
-                            </div>
-                            <div class="news-title">
-                                <h3>開院11周年</h3>
-                            </div>
-                            <div class="news-text2">
-                                <p>当院開院11周年を迎えることとなりました。</p>
-                            </div>                           
+                            <time class="news-date">0000.00.00</time>
+                            <h3 class="news-title">開院11周年</h3>
+                            <p class="news-text2">当院開院11周年を迎えることとなりました。</p>
+                            </p>                           
                         </a>
                     </li>
                 </ul>
