--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <h4>ご自宅まで伺う往診も行っています</h4>
                             </div>
                             <div class="strengths-sec-item_text">
-                                <p>外出が難しい動物たちや飼い主さまのために、獣医師や看護師がご自宅まで伺う往診<span class="br-sp"></span>サービスも<span class="br-pc"></span>行っております。</p>
+                                <p>外出が難しい動物たちや飼い主さまのために、獣医師や看護師がご自宅まで伺う往診サービスも<span class="br-pc"></span>行っております。</p>
                             </div>
                           </div>
                           <div class="strengths-sec-item_image">
