--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <h4>ご自宅まで伺う往診も行っています</h4>
                             </div>
                             <div class="strengths-sec-item_text">
-                                <p>外出が難しい動物たちや飼い主さまのために、獣医師や看護師がご自宅まで伺う往診サービスも<span class="br-pc"></span>行っております。</p>
+                                <p>外出が難しい動物たちや飼い主さまのために、獣医師や看護師がご自宅まで伺う往診サービスも行っております。</p>
                             </div>
                           </div>
                           <div class="strengths-sec-item_image">
@@ -132,8 +132,8 @@
                 <div class="service-list">
                     <div class="service-content">
                         <picture>
-                            <source media="(max-width: 767px)" srcset="images/service01_sp.jpg">
-                            <source media="(min-width: 768px)" srcset="images/service01.jpg">
+                            <source media="(max-width: 768px)" srcset="images/service01_sp.jpg">
+                            <source media="(min-width: 769px)" srcset="images/service01.jpg">
                             <img src="images/service01.jpg" alt="往診サービスでのスタッフとクライアントの様子">
                         </picture>
                         <h3>往診サービス</h3>
@@ -141,8 +141,8 @@
                     </div>
                     <div class="service-content">
                         <picture>
-                        <source media="(max-width: 767px)" srcset="images/service02_sp.jpg">
-                        <source media="(min-width: 768px)" srcset="images/service02.jpg">
+                        <source media="(max-width: 768px)" srcset="images/service02_sp.jpg">
+                        <source media="(min-width: 769px)" srcset="images/service02.jpg">
                         <img src="images/service02.jpg" alt="ペットホテルでお世話しているスタッフの写真">
                         </picture>
                         <h3>ペットホテル</h3>
@@ -150,8 +150,8 @@
                     </div>
                     <div class="service-content">
                         <picture>
-                            <source media="(max-width: 767px)" srcset="images/service03_sp.jpg">
-                            <source media="(min-width: 768px)" srcset="images/service03.jpg">
+                            <source media="(max-width: 768px)" srcset="images/service03_sp.jpg">
+                            <source media="(min-width: 769px)" srcset="images/service03.jpg">
                             <img src="images/service03.jpg" alt="トリミングの実際の様子">
                         </picture>
                         <h3>トリミング</h3>
